--- a/style.css
+++ b/style.css
@@ -1,73 +1,98 @@
-html {
-    position: relative;
-    min-height: 100%;
-}
-
 body {
-    margin: 0 0 100px;
     font-family: sans-serif;
-    flex: 1;
     background: linear-gradient(#5D5861, #1E040A);
-    z-index: 1;
 }
 
-img {
-    filter: drop-shadow(0px 0px 50px #000000);
-}
 
-.wrapper {
-    display: flex;
-    justify-content: space-between;
-    flex: 1 0 auto;
-}
+
+/* sidebar */
 
 .sidebar {
     width: 20%;
     height: 100%;
     top: 0;
+    left: 0;
     position: fixed;
     background-color: #000000;
-    border: 3px solid black;
     padding: 14px 30px;
+}
+
+#topSettings {
+    width: 1.5rem;
+    margin: 15px 0;
 }
 
 .settings {
     color: #9A9A9A;
     font-weight: bold;
-    line-height: 175%;
-    margin-left: 50px;
+    line-height: 100%;
+    margin-bottom: 18px;
+}
+
+.setting {
+    display: flex;
+    align-items: center;
+    margin: 0 0 12px 0;
+}
+
+.settingIcon1 {
+    width: 1.5rem;
+    padding-right: 30px;
+}
+
+.settingIcon2 {
+    width: 1.9rem;
+    padding-right: 25px;
 }
 
 .playlists {
-    font-size: 14px;
     font-weight: bold;
-    line-height: 175%;
+    line-height: 185%;
     color: #9A9A9A;
-    margin-top: 25px;
+    margin-top: 18px;
+}
+
+.playlists p {
+    font-size: 14px;
 }
 
 #now_playing {
     color: #ffffff;
 }
 
+
+
+/* top; playlist info */
+
 .main {
     width: 60%;
-    height: 150vh;
-    margin: 5% 0% 0% 28%;
+    height: 17rem;
+    padding: 5% 0% 0% 28%;
+    margin-bottom: 0;
 }
 
-#Thunder78 {
+.thunder78 {
     position: fixed;
     top: 10px;
     right: 10px;
-    font-size: 15px;
-    text-decoration: none;
-    color: #ffffff;
-    padding: 15px 45px;
+    padding: 5px 30px;
     border-style: solid;
     border-color: #000000;
     border-radius: 100px;
     background: #000000;
+    display: flex;
+    align-items: center;
+}
+
+.thunder78 a {
+    font-size: 15px;
+    text-decoration: none;
+    color: #ffffff;
+}
+
+.thunder78 img {
+    width: 3rem;
+    padding-right: 15px;
 }
 
 .titles {
@@ -82,6 +107,7 @@ img {
 #playlistIcon {
     float: left;
     width: 15rem;
+    filter: drop-shadow(0px 0px 50px #000000);
 }
 
 #playlistTitle {
@@ -101,14 +127,164 @@ img {
     line-height: 35px;
 }
 
-#songIcon {
-    width: 5%;
-}
-
 #cat {
     width: 2rem;
     padding: 0px 10px 0px 0px;
 }
+
+.playButtons {
+    margin-left: 28%;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+}
+
+#greenPlay {
+    width: 4rem;
+}
+
+#download {
+    width: 2.5rem;
+    margin-left: 40px;
+}
+
+#ellipses {
+    width: 2rem;
+    margin-left: 40px;
+}
+
+#magnifyingGlass {
+    width: 1rem;
+    margin-left: 625px;
+}
+
+#customOrder {
+    font-size: 14px;
+    font-weight: bold;
+    margin-left: 40px;
+}
+
+#triangle {
+    width: 0.8rem;
+    margin-left: 15px;
+}
+
+
+
+/* playlist items */
+
+.infoCategories {
+    margin-left: 28%;
+    display: flex;
+    align-items: center;
+}
+
+#number {
+    font-size: 1rem;
+    color: #9A9A9A;
+    margin-left: 35px;
+}
+
+#title {
+    font-size: 1rem;
+    color: #9A9A9A;
+    margin-left: 40px;
+}
+
+#album {
+    font-size: 1rem;
+    color: #9A9A9A;
+    margin-left: 320px;
+}
+
+#dateAdded {
+    font-size: 1rem;
+    color: #9A9A9A;
+    margin-left: 273px;
+}
+
+.divider {
+    margin-left: 28%;
+    margin-right: 3.5%;
+}
+
+.songs {
+    margin-left: 28%;
+    margin-bottom: 100px;
+}
+
+.song {
+    display: flex;
+    padding: 1rem 2rem;
+    align-items: center;
+    font-family: sans-serif;
+    margin-right: 60px;
+}
+
+h1 {
+    color: #C4C4C4;
+    font-size: 1.2rem;
+}
+
+.songIcon {
+    width: 4rem;
+    height: 4rem;
+    position: absolute;
+    margin-left: 50px;
+}
+
+.songInfo {
+    line-height: 1rem;
+    position: absolute;
+    margin-left: 150px;
+}
+
+h2 {
+    font-size: 20px;
+    color: #ffffff;
+    padding: 0;
+    margin: 10px 0;
+}
+
+#greenBars {
+    width: 1.7rem;
+    margin-left: -8px;
+}
+
+#nowPlayingGreen {
+    color: #1DB954;
+}
+
+p {
+    font-size: 16px;
+    color: #9A9A9A;
+    padding: 0;
+    margin: 10px 0;
+}
+
+.album,
+.date,
+.time {
+    color: #9A9A9A;
+    font-size: 1rem;
+    position: absolute;
+}
+
+.album {
+    margin-left: 420px;
+}
+
+.date {
+    margin-left: 750px;
+}
+
+.time {
+    margin-left: 935px;
+}
+
+
+
+/* footer; music controls */
 
 .footer {
     background: #1B1B1B;
@@ -116,18 +292,43 @@ img {
     bottom: 0;
     height: 100px;
     width: 100%;
+    display: flex;
+    align-items: center;
 }
 
-#footerType {
+.footerType {
     color: #ffffff;
     font-weight: bold;
-    padding: 10px 5px 10px 114px;
-    line-height: 25px;
-    font-size: 15px;
+    margin-left: 25px;
+    line-height: 5px;
+}
+
+.footerType h3 {
+    font-size: 17px;
+}
+
+.footerType p {
+    font-size: 14px;
 }
 
 #footerIcon {
-    padding: 17px 0px 2px 15px;
+    padding: 0 0 0 15px;
     width: 4rem;
+    height: 4rem;
     float: left;
+}
+
+#heart {
+    width: 1.5rem;
+    margin-left: 35px;
+}
+
+#progressBar {
+    width: 30rem;
+    margin-left: 175px;
+}
+
+#volume {
+    width: 15rem;
+    margin-left: 225px;
 }
