--- a/style.css
+++ b/style.css
@@ -56,6 +56,10 @@ body {
     font-size: 14px;
 }
 
+.playlists p:hover {
+    color: white;
+}
+
 #now_playing {
     color: #ffffff;
 }
@@ -82,6 +86,12 @@ body {
     background: #000000;
     display: flex;
     align-items: center;
+    z-index: 127;
+}
+
+.thunder78:hover {
+    background: #282828;
+    border-color: #282828;
 }
 
 .thunder78 a {
@@ -219,6 +229,11 @@ body {
     align-items: center;
     font-family: sans-serif;
     margin-right: 60px;
+}
+
+.song:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: 7px;
 }
 
 h1 {
