--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -76,6 +76,10 @@ p {
     font-size: 14px;
 }
 
+.playlists p:hover {
+    color: white;
+}
+
 
 
 /* top; playlist info */
@@ -98,6 +102,12 @@ p {
     background: #000000;
     display: flex;
     align-items: center;
+    z-index: 127;
+}
+
+.thunder78:hover {
+    background: #282828;
+    border-color: #282828;
 }
 
 .thunder78 a {
